# ChangeLog for dev-python/django-rest-framework
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
  -django-rest-framework-2.4.4.ebuild:
  dev-python/django-rest-framework: dropped old

*django-rest-framework-3.1.3 (16 Aug 2015)

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.3.ebuild:
  dev-python/django-rest-framework: Version bump to 3.1.3

  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
  django-rest-framework-2.4.4.ebuild, django-rest-framework-3.0.2.ebuild,
  django-rest-framework-3.1.1.ebuild, django-rest-framework-3.1.2-r1.ebuild,
  django-rest-framework-3.1.2.ebuild:
  dev-python/django-rest-framework: Updated ebuild headers to match new $Id$
  line

*django-rest-framework-3.1.2-r1 (27 Jul 2015)

  27 Jul 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.2-r1.ebuild:
  Make oauth authentication optional again to allow installation with newer
  django versions

*django-rest-framework-3.1.2 (31 May 2015)

  31 May 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.2.ebuild:
  Version bump of django-rest-framework

*django-rest-framework-3.1.1 (07 Apr 2015)

  07 Apr 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-3.1.1.ebuild:
  Version bump of django-rest-framework

  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org>
  -django-rest-framework-2.3.10.ebuild, -django-rest-framework-2.4.3.ebuild:
  Dropped old versions

*django-rest-framework-2.4.4 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-2.4.4.ebuild:
  Version bump

*django-rest-framework-2.4.3 (12 Oct 2014)

  12 Oct 2014; Johann Schmitz <ercpe@gentoo.org>
  +django-rest-framework-2.4.3.ebuild:
  Version bump of django-rest-framework