@@ -3,6 +3,11 @@
 # $Header: $
 
   16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
+  -django-rest-framework-3.1.1.ebuild, -django-rest-framework-3.1.2.ebuild,
+  metadata.xml:
+  dev-python/django-rest-framework: Dropped old
+
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
   -django-rest-framework-2.4.4.ebuild:
   dev-python/django-rest-framework: dropped old
 
